# codility

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  lesson.cpp  lesson.h  main.cpp  template.cpp
Lesson 01 - Iterations/: BinaryGap.cpp
Lesson 02 - Arrays/: CyclicRotation.cpp
Lesson 03 - Time Complexity/: FrogJmp.cpp  PermMissingElem.cpp
Lesson 04 - Counting Elements/: FrogRiverOne.cpp  MaxCounters.cpp  PermCheck.cpp
Lesson 04 - Counting Sums/: FrogRiverOne.cpp  MaxCounters.cpp  MissingInteger.cpp  PermCheck.cpp
Lesson 05 - Prefix Sums/: CountDiv.cpp  GenomicRangeQuery.cpp  MinAvgTwoSlice.cpp  PassingCars.cpp
Lesson 06 - Sorting/: MaxProductOfThree.cpp  Sorting.cpp  Triangle.cpp
Lesson 07 - Stacks And Queues/: Fish.cpp
Lesson 09 - Maximum Slice Problem/: MaxSliceSum.cpp
Lesson 10 - Prime And Composite Numbers/: MinPerimeterRectangle.cpp
Lesson 13 - Fibonacci Numbers/: FibFrog.cpp
Lesson 14 - Binary Search Algorithm/: MinMaxDivision.cpp  NailingPlanks.cpp
Lesson 15 - Caterpillar Method/: AbsDistinct.cpp  CountTriangles.cpp
Lesson 16 - Greedy Algorithms/: MaxNonoverlappingSegments.cpp
include/: CountDiv.h  MinAvgTwoSlice.h  MinMaxDivision.h  NailingPlanks.h  NumberOfDiscIntersections.h
src/: Brackets.cpp  ChocolatesByNumbers.cpp  CountDistinctSlices.cpp  CountDiv.cpp  CountFactors.cpp  CountNonDivisible.cpp  Dominator.cpp  EquiLeader.cpp  GenomicRangeQuery.cpp  MaxProductOfThree.cpp  MaxProfit.cpp  MaxSliceSum.cpp  MinAvgTwoSlice.cpp  MinMaxDivision.cpp  MissingInteger.cpp  NailingPlanks.cpp  Nesting.cpp  NumberOfDiscIntersections.cpp  OddOccurrencesInArray.cpp  PermCheck.cpp  StoneWall.cpp  TapeEquilibrium.cpp  TieRopes.cpp
test/: .gitignore  CMakeLists.gflags.in  CMakeLists.txt  test.cpp
test/include/: args.h  macros.h
test/src/: CountDivTest.cpp  MinAvgTwoSliceTest.cpp  MinMaxDivision.cpp  MinMaxDivisionTest.cpp  NailingPlanksTest.cpp  NumberOfDiscIntersectionsTest.cpp  main.cpp
